--- a/styles/CreativeProducts.module.css
+++ b/styles/CreativeProducts.module.css
@@ -45,12 +45,12 @@
 
 .rightarrw{
   position: absolute;
-  right: 8%;
+  right: 7.5vw;
   top: 55%;
 }
 .leftarrw{
   position: absolute;
-  left: 9%;
+  left:8.5vw;
   top: 55%;
 }
 @media screen and (max-width: 600px) {
@@ -79,5 +79,11 @@
   .mainTitle h1 {
     font-size: x-large;
   }
+  .rightarrw{
+     right: 5.5vw;
+   }
+  .leftarrw{
+     left:5.5vw;
+   }
 }
 /* {hoverd === item.id ? styles.visible : ""}>{item.OnHover}</p> */
